# fmcg-market-basket-studio

./: .gitignore  .pre-commit-config.yaml  README.md  make_docs.py  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
app/: dashboard.py
data/processed/: association_rules.csv
docs/: BUSINESS_STRATEGY.md  CODE_OF_CONDUCT.md
notebooks/: 01_data_ingestion.ipynb  02_rule_mining_demo.ipynb
notebooks/data/processed/: association_rules.csv  margins.csv
src/fmcg_basket/: engine.py  metrics.py  visualization.py
src/fmcg_market_basket_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_engine.py
